# skeleton_tracker

./: CMakeLists.txt  README.md  package.xml
include/skeleton_tracker/: Buffer.h  Filter.h  MarkerSkeletonTracker.h  Munkres.h  OrientationSkeletonTracker.h  SkeletonGroupBuffer.h  SkeletonTracker.h  Tracker.h  utils.h
launch/: custom_configuration_example.launch  custom_configuration_example_mst.launch  custom_configuration_example_ost.launch  default.launch  default.launch.py  hiros_marker_skeleton_tracker_default.launch  hiros_orientation_skeleton_tracker_default.launch  hiros_skeleton_tracker_default.launch
src/: Filter.cpp  MarkerSkeletonTracker.cpp  Munkres.cpp  OrientationSkeletonTracker.cpp  SkeletonGroupBuffer.cpp  SkeletonTracker.cpp  Tracker.cpp  main.cpp  mainMST.cpp  mainOST.cpp  utils.cpp
